--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/pg": "^8.6.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "joi": "^17.7.0"
+    "joi": "^17.7.0",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/pg": "^8.6.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
